--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
   "author": "Tyler McGinnis",
   "license": "MIT",
   "babel": {
-    "presets": ["env", "react"]
+    "presets": [
+      "env",
+      "react"
+    ]
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.27.3",
-    "html-webpack-plugin": "^2.28.0",
-    "style-loader": "^0.16.0",
-    "webpack": "^2.3.1",
-    "webpack-dev-server": "^2.4.2"
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
     "react": "^16.0.0-alpha.5",
